--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,53 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.row-data{
+    display: flex;
+    padding: 10px 10px;
+    margin: 10px auto;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 4px 0px rgb(0, 0, 0, 0.4);
+    border-radius: 4px;
+  
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row-heading{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: #E5E7EB;
+  padding: 10px 10px;
+  margin-top: 20px;
+  border-radius: 4px;
+
+}
+
+.wrapper{
+  max-width: 1024px;
+  margin: 0 auto;
+  
+}
+
+.profile-pic{
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+
+.row-heading div,.row-data div {
+  width: 33%;
+  text-align: left;
+}
+
+.paginator{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+.page-link, .page-link:hover{
+  background-color: rgb(32, 41, 119);
+  border-radius: 4px;
+  color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
